chore: New husky & commitlint

--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "frontend",
+  "name": "green-supermarket-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "yarn husky install && npm install -g @commitlint/cli @commitlint/config-conventional && chmod u+x ./.husky/commit-msg",
+    "commitlint": "commitlint --edit"
   },
   "dependencies": {
+    "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "commitlint": "^18.4.3",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.2",
+    "husky": "^8.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "typescript": "^5"
   }
 }
