--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -5,27 +5,28 @@ on: [push, pull_request]
 jobs:
   commitlint:
     runs-on: ubuntu-22.04
+
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Install required dependencies
         run: |
-          apt update
-          apt install -y sudo
+          sudo apt update
           sudo apt install -y git curl
-          curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
-          sudo DEBIAN_FRONTEND=noninteractive apt install -y nodejs
+
       - name: Print versions
         run: |
           git --version
-          node --version
-          npm --version
-          npx commitlint --version
+
+      - name: Check Node.js version
+        run: |
+          node --version || echo "Node.js not installed or not found"
+
       - name: Install commitlint
         run: |
-          npm install conventional-changelog-conventionalcommits
-          npm install commitlint@latest
+          npm install -g commitlint@latest
 
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
