feat: Global search function

--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.11.2",
+    "@types/lodash": "^4.14.202",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "rc-slider": "^10.5.0",
